# meridian-stores

./: .gitignore  AGENTS.md  DEPLOY.md  Makefile  PLAN.md  README.md  docker-compose.yml
.github/: README.md
.github/workflows/: ci.yml  deploy-aws.yml  destroy-aws.yml
backend/: .env.example  Dockerfile  Dockerfile.lambda  pyproject.toml
backend/src/meridian_stores/: __init__.py  app.py  main.py  settings.py
backend/src/meridian_stores/agents/: __init__.py  agent.py  agent_config.py  available_tools.json  chatbot.py  chatbot_config.py  config.py  conversation_manager.py  llm_clients.py  main.py  mcp.http  requirements.txt  system_prompt.py
backend/src/meridian_stores/config/: env.example
backend/tests/: test_app.py  test_chatbot.py
config/: env.example
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/config/: frontend.env.example
frontend/nginx/: default.conf
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ChatInput.tsx  ChatInterface.tsx  MessageBubble.tsx  MessageList.tsx  TypingIndicator.tsx
frontend/src/hooks/: useChat.ts
infra/: README.md
infra/aws/: README.md  backend.tf.example  frontend.tf  lambda.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/bootstrap/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf  versions.tf
infra/nginx/: default.conf.example
infra/terraform/: main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
scripts/: init-project.sh
(+2 files in other folders)
